--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     box-sizing: border-box;
+    font-family: Verdana, Helvetica, Arial, sans-serif;
 }
 
 header {
@@ -46,4 +47,41 @@ header ul li a {
 .carousel-center {
     display: flex;
     justify-content: center;
+}
+
+.carousel {
+    width: 60%;
+    font-size: 30px;
+    margin: 60px;
+}
+
+section {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 25px;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+section div {
+    box-shadow: 0px 0 5px rgb(178, 201, 212);
+    padding: 30px;
+}
+
+section div:hover {
+    box-shadow: 0px 0 5px rgb(0, 0, 0);
+    transition: 1s;
+}
+
+section div h1{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.block-1 {
+    grid-column: 1/3;
+}
+
+.block-2 {
+    grid-column: 3/5;
 }
