--- a/style/style.css
+++ b/style/style.css
@@ -73,6 +73,10 @@ section div:hover {
     transition: 1s;
 }
 
+span {
+    font-size: 15px;
+}
+
 section div h1{
     font-size: 20px;
     font-weight: bold;
@@ -84,4 +88,52 @@ section div h1{
 
 .block-2 {
     grid-column: 3/5;
+}
+
+footer {
+    background-color: black;
+    color: white;
+}
+
+@media screen and (max-width: 1393px) {
+    .carousel {
+        font-size: 10px;
+    }
+
+    section {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    section {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    section {
+        display: flex;
+        flex-direction: column;
+    }
+
+    section img {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    header ul li a {
+        font-size: 15px;
+    }
+    
+    section {
+        display: flex;
+        flex-direction: column;
+    }
+
+    section img {
+        width: 100%;
+    }
 }
